# OOT3DHDTextGenerator

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  ModelTrainer.py  OOT3DHDTextGenerator.py  README.md  conf.yaml  conf_cmn-Hans.yaml  conf_cn.yaml  conf_en-US.yaml  en-US.yaml  mypy.ini  pyproject.toml  zelda.py
.github/workflows/: build.yml  codeql-analysis.yml
oot3dhdtextgenerator/: ModelTrainer.py  __init__.py  cmn-Hans.yaml  hanzi_dataset.py  hanzi_dataset_generator.py  model.py  model_trainer.py
oot3dhdtextgenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oot3dhdtextgenerator/apps/: __init__.py  old_char_assigner.py
oot3dhdtextgenerator/apps/book_lister/: __init__.py  book_lister.py  sqlite.db
oot3dhdtextgenerator/apps/book_lister/models/: author.py
oot3dhdtextgenerator/apps/book_lister/routes/: index.py
oot3dhdtextgenerator/apps/book_lister/templates/books/: book.html  edit.html
oot3dhdtextgenerator/apps/char_assigner/: __init__.py  char_assigner.py  character.py  models.py  routes.py  sqlite.db  views.py
oot3dhdtextgenerator/apps/char_assigner/models/: __init__.py  author.py  book.py  character.py
oot3dhdtextgenerator/apps/char_assigner/routes/: books.py  index.py
oot3dhdtextgenerator/apps/char_assigner/templates/: character.html  characters_rows.html  index.html
oot3dhdtextgenerator/apps/char_assigner/views/: __init__.py  books.py  index.py
oot3dhdtextgenerator/apps/char_inspector/: __init__.py  char_inspector.py  routes.py
oot3dhdtextgenerator/apps/char_inspector/templates/: index.html  row.html  rows.html  table.html
oot3dhdtextgenerator/cli/: __init__.py  book_lister_cli.py  char_assigner_cli.py  char_inspector_cli.py  learning_dataset_generator_cli.py  model_trainer_cli.py  training_dataset_generator_cli.py
oot3dhdtextgenerator/common/: __init__.py  argument_parsing.py  command_line_interface.py  csv.py  exception.py  file.py  general.py  logs.py  subprocess.py  testing.py  validation.py
oot3dhdtextgenerator/core/: __init__.py  assignment_dataset.py  base64.py  learning_dataset.py  model.py  training_dataset.py
oot3dhdtextgenerator/data/: README.md  __init__.py  characters.csv
oot3dhdtextgenerator/data/oot3d/: assigned.csv  unassigned.csv
oot3dhdtextgenerator/data/oot3d/test_10/: images.npy  specifications.csv
oot3dhdtextgenerator/data/oot3d/train_10/: images.npy  specifications.csv
oot3dhdtextgenerator/image/: __init__.py  oot3d_shadow_processor.py  oot3d_text_processor.py  typing.py
oot3dhdtextgenerator/pipelines/: __init__.py  oot3d_shadow_processor.py  oot3d_sorter.py  oot3d_text_processor.py  oot_3d_hd_text_substituter.py
oot3dhdtextgenerator/utilities/: __init__.py  char_assigner.py  learning_dataset_generator.py  model_trainer.py  old_char_assigner.py  run.py  training_dataset_generator.py
oot3dhdtextgenerator/utilities/char_assigner/: __init__.py  models.py  sqlite.db  views.py
oot3dhdtextgenerator/utilities/char_assigner/templates/: index.html
oot3dhdtextgenerator/utilities/templates/: index.html
test/: conftest.py  test_cli.py
test/apps/: test_char_assigner.py  test_character.py
test/common/: conftest.py  test_command_line_interface.py  test_csv.py  test_exception.py  test_logs.py
test/common/argument_parsing/: test_arg_groups.py  test_get_validator.py  test_integration.py  test_validators.py
test/common/file/: test_get_temp_directory_path.py  test_get_temp_file_path.py  test_rename_preexisting_output_path.py
test/common/subprocess/: test_run_command.py  test_run_command_live.py
test/common/validation/: test_val_executable.py  test_val_float.py  test_val_input_dir_path.py  test_val_input_path.py  test_val_int.py  test_val_output_dir_path.py  test_val_output_path.py  test_val_str.py
test/core/: test_assignment_dataset.py  test_learning_dataset.py  test_training_dataset.py
test/utilities/: test_training_dataset_generator.py
utils/: ModelTrainer.py  TitleProcessor.py  Upscaler.py  conf_modeltrainer.yaml  conf_upscaler.yaml  notes.md
utils/workflows/100.100.workflow/Contents/: Info.plist  document.wflow
utils/workflows/3x.workflow/Contents/: Info.plist  document.wflow
utils/workflows/denoise.workflow/Contents/: Info.plist  document.wflow
