[project]
name = "oot3dhdtextgenerator"
version = "0.1.0"
description = ""
authors = [
    { name = "Karl Debiec", email = "karl.t.debiec@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "flask>=3.1.1",
    "h5py>=3.14.0",
    "Pillow>=11.0.0",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "pipescaler @ git+https://github.com/KarlTDebiec/PipeScaler.git"
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.10",
    "types-Pillow>=10.2.0.20240822",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "NPY", # numpy-specific rules
    "PERF", # perflint
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D410", # Missing blank line after section
    "D411", # Missing blank line before section
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.setuptools]
packages = { find = { include = ["oot3dhdtextgenerator*"] } }
